--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <Folder Include="Repositories\Interfaces\" />
     <Folder Include="Repositories\Implementations\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
