--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="DTO\Order\" />
     <Folder Include="Exceptions\" />
-    <Folder Include="DTO\" />
   </ItemGroup>
 
   <ItemGroup>
